--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pandas>=2.1.0",
     "rich>=13.7.0",
     "setuptools>=69.0.0",
+    "mdutils>=1.6.0",
 ]
 
 [dependency-groups]
