--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "rich>=13.7.0",
     "setuptools>=69.0.0",
     "mdutils>=1.6.0",
+    "openpyxl>=3.1.0",
 ]
 
 [dependency-groups]
