--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "setuptools>=69.0.0",
     "mdutils>=1.6.0",
     "openpyxl>=3.1.0",
+    "tables>=3.10.2",
 ]
 
 [dependency-groups]
